examples/bad/runtime/div-by-0.oo
int zero = 0;
print(5/zero);
